vlib/v/checker/tests/is_type_invalid.out
vlib/v/checker/tests/is_type_invalid.vv:14:12: error: `IoS` has no variant `u8`
   12 | 
   13 | fn main() {
   14 |     if IoS(1) is u8 {
      |               ~~
   15 |         println('not cool')
   16 |     }
vlib/v/checker/tests/is_type_invalid.vv:18:7: error: `Cat` doesn't implement method `speak` of interface `Animal`
   16 |     }
   17 |     a := Animal(Dog{})
   18 |     if a is Cat {
      |          ~~
   19 |         println('not cool either')
   20 |     }
